# voicevox_ros2

./: LICENSE  NOTE.md  README.md  setup.bash  voicevox_ros2_pkg_setup.sh
voicevox_ros2/: package.xml  setup.cfg  setup.py
voicevox_ros2/voicevox_ros2/: .pub_test.py.swp  .srv_test.py.swp  pub_test.py  run.py  srv_test.py
voicevox_ros2/voicevox_ros2/voicevox_ros2_common/: test.py  voicevox_ros2_tts.py
voicevox_ros2_interface/: CMakeLists.txt  package.xml
voicevox_ros2_interface/msg/: Speaker.msg
voicevox_ros2_interface/srv/: Speaker.srv
